--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,7 +17,8 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "storage"
+    "storage",
+    "contextMenus"
   ],
   "content_scripts": [
     {
