--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
     "webpack": "^5.78.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
-  }
+  },
+  "dependencies": {
+    "node": "^19.8.1"
+  },
+  "browser":{
+    "child_process": false
+  }  
 }
