--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "dependencies": {
     "node": "^19.8.1",
     "os-browserify": "^0.3.0",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "weaviate-ts-client": "^1.0.0"
   },
   "browser": {
