--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,15 +21,5 @@
     "contextMenus",
     "nativeMessaging"
   ],
-  "content_scripts": [
-    {
-      "matches": [
-        "<all_urls>"
-      ],
-      "run_at": "document_idle",
-      "js": [
-        "contentScript.js"
-      ]
-    }
-  ]
+  "optional_host_permissions": ["https://*/*"]
 }
