bookmark folder is now created on startup of chrome extension

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,7 @@
   "permissions": [
     "storage",
     "contextMenus",
-    "nativeMessaging"
+    "bookmarks"
   ],
   "optional_host_permissions": ["https://*/*"]
 }
