--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Testchromeextension",
+  "name": "DissertationChromeExtension",
   "version": "0.1.0",
   "description": "My Chrome Extension",
   "icons": {
@@ -13,7 +13,7 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_title": "Testchromeextension",
+    "default_title": "DissertationChromeExtension",
     "default_popup": "popup.html"
   },
   "permissions": [
