--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+ChromeExtension/node_modules
 /server/node_modules
 
 # production
-/build
+ChromeExtension/build
 
 # misc
 .DS_Store
@@ -13,7 +13,7 @@
 npm-debug.log*
 
 # packed files
-/release
+ChromeExtension/release
 
 build.pem
 build.crx
