--- a/DatabaseDockerFolder/docker-compose.yml
+++ b/DatabaseDockerFolder/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       ENABLE_MODULES: 'text2vec-transformers'
       CLUSTER_HOSTNAME: 'node1'
     volumes:
-      - dbDataV2:/var/lib/weaviate
+      - dbData:/var/lib/weaviate
   t2v-transformers:
     image: semitechnologies/transformers-inference:sentence-transformers-multi-qa-MiniLM-L6-cos-v1
     environment:
@@ -35,5 +35,6 @@ services:
           - capabilities: 
             - 'gpu'
 volumes:
-  dbDataV2:
+  dbData:
+    external: true
 ...
